--- a/app/src/main/res/layout/content_complaint_form.xml
+++ b/app/src/main/res/layout/content_complaint_form.xml
@@ -109,7 +109,8 @@
         android:layout_toRightOf="@+id/textView4"
         android:layout_toEndOf="@+id/textView4"
         android:layout_marginTop="39dp"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:onClick="checkboxClicked" />
 
     <Button
         android:layout_width="wrap_content"
@@ -118,6 +119,7 @@
         android:id="@+id/button"
         android:layout_below="@+id/checkBox"
         android:layout_centerHorizontal="true"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:onClick="Submit" />
 
 </RelativeLayout>
