--- a/app/src/main/res/layout/activity_complaint_form.xml
+++ b/app/src/main/res/layout/activity_complaint_form.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <Hello
+        <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
