--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,8 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.chandraanshugarg.maintainus.MainActivity"
-    tools:showIn="@layout/activity_main"
-    android:onClick="openForm">
+    tools:showIn="@layout/activity_main">
 
     <Button
         android:layout_width="wrap_content"
