--- a/app/src/main/res/layout/content_complaint_form.xml
+++ b/app/src/main/res/layout/content_complaint_form.xml
@@ -9,8 +9,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.chandraanshugarg.maintainus.ComplaintForm"
-    tools:showIn="@layout/activity_complaint_form"
-    android:onClick="SubmitButtonClick">
+    tools:showIn="@layout/activity_complaint_form">
 
     <TextView
         android:layout_width="wrap_content"
@@ -119,7 +118,7 @@
         android:layout_below="@+id/checkBox"
         android:layout_centerHorizontal="true"
         tools:ignore="HardcodedText"
-        android:onClick="SubmitButtonClick" />
+        />
 
     </RelativeLayout>
 </ScrollView>
