--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -45,8 +45,19 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View Complaints"
+        android:text="Update Complaint"
         android:id="@+id/button"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/button2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="33dp"
+        android:onClick="updateForm"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Status"
+        android:id="@+id/button3"
+        android:layout_marginTop="34dp"
+        android:layout_below="@+id/button"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
