Working on Update

--- a/app/src/main/res/layout/complaint_item.xml
+++ b/app/src/main/res/layout/complaint_item.xml
@@ -107,21 +107,42 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="30"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:orientation="horizontal">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Update"
-            android:paddingRight="10dp"/>
+            android:paddingRight="10dp"
+            android:onClick="updateHandler"
+            android:id="@+id/update" />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Delete"
-            android:paddingRight="10dp"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="View Status"/>
+            android:paddingRight="10dp"
+            android:id="@+id/delete"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:id="@+id/dummyDesc"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:id="@+id/dummyCause"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:id="@+id/dummyTime"/>
+
+        <!--<Button-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="View Status"-->
+            <!--android:id="@+id/ViewStatus"/>-->
     </LinearLayout>
 
 </LinearLayout>
