--- a/app/src/main/res/layout/complaint_item.xml
+++ b/app/src/main/res/layout/complaint_item.xml
@@ -97,11 +97,22 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="STATUS : "
+            android:id="@+id/textView5" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:id="@+id/repair_time"/>
+            android:id="@+id/repair_time"
+            android:textStyle="bold"
+            android:paddingLeft="0dp"
+            android:paddingRight="175dp" />
 
     </LinearLayout>
 
